# SHA-1-password-cracker

./: password_cracker.py  pyproject.toml
