[tool.poetry]
name = "sha-1-password-cracker"
version = "0.1.0"
description = "freeCodeCamp: Information Security Projects - SHA1 Password Cracker"
authors = ["Paul Varner <fuzzyray@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
